fix: navbar content margin and text-overflow (#34)

--- a/front/src/app/core/components/side-nav/side-nav.component.scss
+++ b/front/src/app/core/components/side-nav/side-nav.component.scss
@@ -58,4 +58,8 @@
     align-items: center;
     padding: 16px;
   }
+
+  .mdc-list-item__primary-text {
+    text-overflow: unset;
+  }
 }
